# OptionsWizardTrader

./: .gitignore  .replit  Dockerfile  apply_moneyness_fix.py  apply_targeted_updates.py  cache_module.py  calculate_dynamic_theta_decay.py  check_format_function.py  check_modified_formatting.py  check_option_history.py  check_options_snapshot.py  check_spy_535_option.py  check_tsla_put.py  check_unusual_activity.py  clean_strike_price_fix.py  cleanup_formatting.py  cleanup_project.py  combined_scalp_stop_loss.py  common_words.txt  config.json  debug_contract_parts.py  debug_option_trades.py  debug_unusual_activity.py  deployment_instructions.md  direct_fix.py  direct_fix_strike.py  direct_format_fix.py  direct_strike_fix.py  direct_test_unusual.py  discord_bot.fixed.py  discord_bot.py  discord_bot.py.bak  discord_bot_config.py  discord_bot_patch.diff  discord_permissions.json  exact_format_fix.py  extract_real_strike_price.py  final_format_fix.py  fix_contract_index.py  fix_contract_parsing.py  (+92 more)
temp_repo/: .replit  add_theta_decay_section.py  app.py  apply_buffer_limit_fix.py  atr_removal_summary.md  black_scholes_integration_readme.md  bs_calculator_integration.py  buffer_enforcement_fix_summary.md  buffer_fix_test_instructions.md  buffer_limits_test_report.md  calculate_dynamic_theta_decay.py  careful_buffer_fix.py  careful_integration.py  check_bot_response.py  check_combined_stop_loss.py  check_duplicates.py  check_timeframes.py  check_tsla.py  combined_scalp_stop_loss.py  combined_scalp_stop_loss.py.bak  comprehensive_error_fix.py  comprehensive_formatting_fix.py  (+242 more)
(+26 files in other folders)
