[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.5.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "scipy>=1.15.2",
    "streamlit>=1.44.1",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.55",
]
